# OrganizeMe

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: build.yaml  ci-cd.yaml
docker/: python-poetry.dockerfile
organize_me/: api.py  controller.py  exampleApi.py  exceptions.py  layout.py  main.py  task.py  task_api.py  task_manager.py
organize_me/app/: controller.py  exampleApi.py  layout.py  layout_validation.py  task.py  task_api.py
organize_me/css/: layout.tcss
organize_me/google_calendar/: README.md  auth_connection.py  calendar_events.py  calendar_service.py
organize_me/ui/components/: task_component.py
organize_me/ui/pages/: tasks.py
tests/: test_hello_world.py  test_layout_app.py  test_task.py  test_task_api.py  test_task_manager.py
