[tool.poetry]
name = "organize_me"
version = "0.1.0"
description = "TODO TUI"
authors = ["David Sapir <david.sa@solaredge.com>"]
readme = "README.md"

[tool.poetry.scripts]
organize-me = "organize_me.main:run"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.2"
mypy = "^1.11.2"
ruff = "^0.6.3"
pydantic = "^2.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
